--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,16 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
+
 android {
 
     compileSdkVersion 28
+
     defaultConfig {
         applicationId "infinite_software.intelligence_center.revolut"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -26,6 +30,18 @@ android {
 
 dependencies {
 
+    def recyclerview_version = "1.1.0-alpha04"
+    def constraintlayoutversion = "2.0.0-alpha4"
+    def materialVersion = "1.1.0-alpha05"
+    def lifecycleComponentVersion = "2.1.0-alpha04"
+    def retrofitVersion = "2.3.0"
+    def gsonVersion = "2.7"
+    def okHttpVersion = "3.10.0"
+    def rxJavaVersion = "2.1.9"
+    def rxAndroidVersion = "2.0.2"
+    def dagger2_version = '2.16'
+    def sdpVersion = "1.0.6"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
@@ -33,5 +49,38 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+
+    // RecyclerView
+    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
+
+    // Constraint Layout
+    implementation "androidx.constraintlayout:constraintlayout:$constraintlayoutversion"
+
+    // Material Design
+    implementation "com.google.android.material:material:$materialVersion"
+
+    //Live Data
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycleComponentVersion"
+
+    //Retrofit 2
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation "com.google.code.gson:gson:$gsonVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okHttpVersion"
+
+    // Dagger 2
+    implementation "com.google.dagger:dagger:$dagger2_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger2_version"
+    compileOnly "org.glassfish:javax.annotation:3.1.1"
+
+    //Rx
+    implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
+
+    //Scalable dp and sp
+    implementation "com.intuit.sdp:sdp-android:$sdpVersion"
+    implementation "com.intuit.ssp:ssp-android:$sdpVersion"
 
 }
