--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="infinite_software.intelligence_center.revolut">
+          package="fc.home_work.revolut">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application android:allowBackup="true"
                  android:label="@string/app_name"
+                 android:name=".RevolutApplication"
                  android:icon="@mipmap/ic_launcher"
                  android:roundIcon="@mipmap/ic_launcher_round"
                  android:supportsRtl="true"
                  android:theme="@style/AppTheme">
 
         <activity
-                android:name=".ui.RatesActivity"
+                android:name="fc.home_work.revolut.ui.RatesActivity"
                 android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,4 +22,5 @@
         </activity>
 
     </application>
+
 </manifest>
