--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     def dagger2_version = '2.16'
     def roomVersion = "2.1.0"
     def sdpVersion = "1.0.6"
+    def timberVersion = "4.7.1"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -61,6 +62,8 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    //Kotlin reflection
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
     // RecyclerView
     implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
@@ -99,5 +102,7 @@ dependencies {
     implementation "com.intuit.sdp:sdp-android:$sdpVersion"
     implementation "com.intuit.ssp:ssp-android:$sdpVersion"
 
+    //Logger
+    implementation "com.jakewharton.timber:timber:$timberVersion"
 
 }
